# sator-rotas-cpp

./: .gitignore  CMakeLists.txt  README.md  build.ninja  exceptions.h  latin.txt  main.cpp  qtcsettings.cmake  radix.h  resultwriter.cpp  resultwriter.h  worddictionary.cpp  worddictionary.h  wordnode.cpp  wordnode.h  wordrange.cpp  wordrange.h
tests/: TestOutput.py
